Test build dependencies (I268).